Fix alignment of card images

--- a/code/style.css
+++ b/code/style.css
@@ -74,7 +74,7 @@ p {
 }
 
 #killerImage, #weaponImage, #roomName {
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .killer-deck {
